flask-app-v3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myflaskapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myflaskapp
  template:
    metadata:
      labels:
        app: myflaskapp
    spec:
      containers:
      - name: myflaskapp
        image: pvass24/myflaskapp:v3
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m  # 0.1 CPU cores
          limits:
            cpu: 200m  # 0.2 CPU cores
