flask-app-v3/myflaskapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myflaskapp-svc
  namespace: default
spec:
  ports:
  - nodePort:
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    version: "3"
  type: NodePort
